# rag-form10q

./: .env-example  .gitignore  Dockerfile  README.md  instructions.json  pyproject.toml  sample_config.py
docs/: architecutre.md
notebooks/: chonkie.ipynb  eda_questions.ipynb  parse_and_load.ipynb  system_analysis.ipynb
notebooks/parsers/: marker.ipynb  pdfplumber.ipynb  unstructured.ipynb
scripts/: answer_questions.py  generate_chunks.py  load_database.py  parse_documents.py
src/: api.py  chunker.py  database.py  doc_processors.py  inference.py  language_model.py  llm.py  main.py  parser.py  pipelines.py  schema.py  util.py  vec_database.py
src/chunker/: base.py  text.py
src/document_processors/: __init__.py  document_processor.py  marker_processor.py  plumber_processor.py
src/embedding/: base.py  fastembed_.py  openai_.py  qwen.py
src/llm/: base.py  instructions.py  language_model.py  openai_.py  qwen.py
src/parser/: base.py  markdown.py  text.py
src/schema/: __init__.py  base.py  chunk.py  embedding_stack.py  pipeline_config.py
src/vec_database/: base.py  dense.py  hybrid.py
test/: test_huggingface.py  test_openai.py
